# Train-Simulation-App

./: .gitignore  .gitignore_webengine  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  COMPLETE-REBUILD-GUIDE.md  DAILY_LOG.md  LICENSE  README.md  TODO  TODO.md  build.sh  dev-mode-bug.md  fix_api.js  fix_api_backend.js  fix_page.js  fix_translation.js  legends.md  main.cpp  package-lock.json  package.json  start-dev.sh  start-prod.sh
.github/: build-deb.yml  build-linux.yml  build-windows.yml
app_output/: train-simulation-app-1.0.0-1.x86_64.rpm  train-simulation-app_1.0.0_amd64.deb
auth/: auth_data.h  user_manager.h
backend/: CMakeLists.txt  main.cpp
backend/auth/: .auth  auth_data.h  auth_manager.cpp  auth_manager.h  user_manager.cpp  user_manager.h
backend/controllers copy/data/: electrical_data_handler.cpp  electrical_data_handler.h  running_data_handler.cpp  running_data_handler.h  track_data_handler.cpp  track_data_handler.h  train_data_handler.cpp  train_data_handler.h
backend/controllers copy/output/: csv_output_handler.cpp  csv_output_handler.h  dynamic_simulation_chart_handler.cpp  dynamic_simulation_chart_handler.h  output_table_handler.cpp  static_simulation_chart_handler.cpp
backend/controllers copy/simulation/: csv_variables_handler.cpp  csv_variables_handler.h  current_handler.cpp  current_handler.h  energy_handler.cpp  energy_handler.h  moving_handler.h  power_handler.h  simulation_track_handler.cpp  simulation_track_handler.h  tractive_effort_handler.h  train_simulation_handler.cpp  train_simulation_handler.h  utility_handler.cpp
backend/controllers/data/: electrical_data_handler.cpp  electrical_data_handler.h  running_data_handler.cpp  running_data_handler.h  track_data_handler.cpp  track_data_handler.h  train_data_handler.cpp  train_data_handler.h
backend/controllers/optimization/: optimization_handler.cpp  optimization_handler.energy.cpp  optimization_handler.h
backend/controllers/optimization/fuzzy/: fuzzy_engine.cpp  fuzzy_rule.h  fuzzy_set.cpp  fuzzy_set.h  fuzzy_variable.h  trapezoid_set.cpp  trapezoid_set.h  triangle_set.cpp  triangle_set.h
backend/controllers/output/: csv_output_handler.cpp  csv_output_handler.h  dynamic_simulation_chart_handler.cpp  output_table_handler.h  save_button_handler.cpp  save_button_handler.h  static_simulation_chart_handler.cpp  static_simulation_chart_handler.h
backend/controllers/simulation/: csv_variables_handler.cpp  csv_variables_handler.h  energy_handler.cpp  energy_handler.h  mass_handler.cpp  mass_handler.h  moving_handler.cpp  power_handler.cpp  power_handler.h  resistance_handler.cpp  resistance_handler.h  simulation_track_handler.cpp  simulation_track_handler.h  traction_motor_handler.cpp  traction_motor_handler.h  tractive_effort_handler.cpp  tractive_effort_handler.h  train_simulation_handler.cpp  train_simulation_handler.h  utility_handler.cpp  utility_handler.h
backend/core/: appcontext.cpp  appcontext.h
backend/daily-reminder/: main.cpp  mainwindow.cpp
backend/http_server/: api_handler.cpp  api_handler.h  http_server.cpp  http_server.h
backend/http_server/inputs/: electrical_parameter_handler.cpp  electrical_parameter_handler.h  running_parameter_handler.cpp  running_parameter_handler.h  track_parameter_handler.cpp  track_parameter_handler.h  train_parameter_handler.cpp  train_parameter_handler.h
backend/http_server/simulations/: simulation_handler.cpp  simulation_handler.h
backend/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
backend/models/: constant_data.h  efficiency_data.h  energy_data.h  load_data.h  mass_data.h  moving_data.h  power_data.h  resistance_data.h  simulation_data.h  station_data.h  train_motor_data.h
backend/scripts/: build-release.sh  smart-run.sh
backend/styles/: colors.h
backend/utils/: fuzzy_engine.cpp  fuzzy_engine.h
backend/utils/fuzzy_engine/: fuzzy_engine.h  fuzzy_variable.cpp
backend/webengine/: file_bridge.cpp  file_bridge.h  webengine_window.cpp  webengine_window.h
controllers/: csv_handler.h  current_handler.h  energy_handler.cpp  energy_handler.h  mass_handler.cpp  mass_handler.h  moving_handler.cpp  moving_handler.h  output_handler.cpp  output_handler.h  power_handler.cpp  power_handler.h  resistance_handler.cpp  resistance_handler.h  simulation_track_handler.cpp  simulation_track_handler.h  traction_motor_handler.cpp  traction_motor_handler.h  tractive_effort_handler.cpp  tractive_effort_handler.h  trainSimulationError.txt  trainSimulationWorked.txt  trainSiulation.txt  train_simulation.cpp  train_simulation.h  utility_handler.cpp  utility_handler.h
core/: appcontext.cpp  appcontext.h
documentations/: CHANGELOG.md  CODE_AUDIT.md  DEVELOPER_GUIDE.md  FIX_IMPLEMENTATION_REPORT.md  FUZZY_FLOWCHART.md  FUZZY_LOGIC_IMPLEMENTATION.md  FUZZY_OPTIMIZATION_STRATEGY.md  PHYSICS_FORMULAS_AND_SIMULATION_ANALYSIS.md
formulas/: Train simulation fix.xlsx  adhesion_train_simulation.csv  ampere.cpp  dynamic_train_simulation(2).csv  dynamic_train_simulation.csv  fixed_dynamic_simulation.csv  fixed_moving_simulation.csv  fixed_static_simulation.csv  legends.txt  mass.cpp  mass_train_simulation.csv  moving_simulation.cpp  moving_train.cpp  moving_train_csv.cpp  moving_train_simulation.cpp  new_dynamic_simulation.csv  new_static_simulation.csv  power_train.cpp  resistance.cpp  static_train_simulation.csv  stopping_train.cpp  traction_motor.cpp  tractive_effort.cpp  tractive_effort_simulation.csv  train simulation.xlsx  trainSimulation.xlsx  train_effort_simulation.csv  train_power_simulation.csv  train_simulation.csv  train_speed_simulation.csv
frontend/: next.config.ts  package.json
mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindowDummy.txt
models/: button_sidebar_dummi.txt  button_sidebar_dummy.txt  constant_values.cpp  constant_values.h  efficiency_data.h  energy_data.h  load_data.h  mainwindow_dummy.txt  moving_data.h  power_data.h  resistance_data.h  simulation_data.h  station_data.h  trainModels_dummy.txt  train_data.h  train_simulation.cpp  train_simulation.h
pages/: constant_values_page.cpp  testpage.h  (+25 more)
(+221 files in other folders)
